fix styling transaction card on mobile device (change order title and amount) and fix styling inputs placeholder in Deposits filter (on mobile)

--- a/src/themes/default/styles/component.dashboard-card.css
+++ b/src/themes/default/styles/component.dashboard-card.css
@@ -70,7 +70,7 @@
         }
     }
 
-    &__footer {
+    /* &__footer {
         display: flex;
         justify-content: space-around;
         text-align: center;
@@ -85,7 +85,7 @@
                 width: 200px;
             }
         }
-    }
+    } */
 
     &--emptystate {
         background-color: $white;
